fixes nav bar header image overlapping issue

--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body, html {
     overflow-x: hidden!important
     
 }
+body{padding-top: 50px}
 
 /* The hero image */
 .hero-image {
